--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -19,7 +19,7 @@ on:
 
 jobs:
 
-    build:
+    check:
         name: Build Module
         runs-on: ubuntu-latest
         container: node:alpine
@@ -50,6 +50,7 @@ jobs:
     test:
         name: Testing Module
         runs-on: ubuntu-latest
+        needs: [check]
         steps:
             - name: Checkout code
               uses: actions/checkout@master
@@ -62,6 +63,7 @@ jobs:
                 repository: technogix/vault
                 path: vault
                 ref: v1.0.0
+                token: ${{ secrets.GH_ACCESS_TOKEN }}
 
             - name: Retrieving vault key
               run: echo ${{ secrets.VAULT_KEY }} >> vault/database.key && ls -l vault
