--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -42,6 +42,7 @@ jobs:
                 args: --sarif-file-output=snyk.sarif
 
             - name: Upload result to GitHub Code Scanning
+              continue-on-error: true
               uses: github/codeql-action/upload-sarif@v1
               if: always()
               with:
