--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -38,8 +38,6 @@ jobs:
               uses: snyk/actions/iac@master
               env:
                 SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-              with:
-                args: --sarif-file-output=snyk.sarif
 
             - name: Upload result to GitHub Code Scanning
               continue-on-error: true
@@ -73,8 +71,7 @@ jobs:
               continue-on-error: true
               uses: docker://technogix/terraform-python-awscli:v2.0.0
               with:
-                args: ./module/scripts/robot.sh
-
+                args: ./module/scripts/robot.sh -l DEBUG -d tests
             - name: Push API documentation to Github Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
