--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,18 +4,18 @@
 # Copyright (c) [2022] Technogix SARL
 # All rights reserved
 # -------------------------------------------------------
-# Test pipeline for module
+# Analysis pipeline for website
 # -------------------------------------------------------
 # Nadège LEMPERIERE, @01 march 2022
 # Latest revision: 01 march 2022
 # -------------------------------------------------------
 
-name: Module Build Pipeline
+name: Module Release Pipeline
 
 on:
     push:
-        branches:
-            - '**'
+        tags:
+            - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
 
@@ -28,19 +28,16 @@ jobs:
               uses: actions/checkout@master
 
             - name: Linting code
-              continue-on-error: true
               uses: docker://technogix/terraform-python-awscli:v2.0.0
               with:
                 args: tflint --init && tflint --format sarif
 
             - name: Run Snyk to check for vulnerabilities
-              continue-on-error: true
               uses: snyk/actions/iac@master
               env:
                 SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
             - name: Upload result to GitHub Code Scanning
-              continue-on-error: true
               uses: github/codeql-action/upload-sarif@v1
               if: always()
               with:
@@ -68,7 +65,13 @@ jobs:
               run: printf '%s\n' '${{ secrets.VAULT_KEY }}' > vault/database.key
 
             - name: Lauching tests
-              continue-on-error: true
               uses: docker://technogix/terraform-python-awscli:v2.0.0
               with:
                 args: ./module/scripts/robot.sh -l DEBUG -d tests
+
+            - name: Push API documentation to Github Pages
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                publish_dir: ./tests
+                github_token: ${{ secrets.GH_ACCESS_TOKEN }}
+                commit_message: "Generate Test report"
