--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -31,13 +31,15 @@ jobs:
               continue-on-error: true
               uses: docker://technogix/terraform-python-awscli:v2.0.0
               with:
-                args: tflint --init && tflint --format sarif
+                args: ./scripts/lint.sh
 
             - name: Run Snyk to check for vulnerabilities
               continue-on-error: true
               uses: snyk/actions/iac@master
               env:
                 SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+              with:
+                args: --sarif-file-output=snyk.sarif
 
             - name: Upload result to GitHub Code Scanning
               continue-on-error: true
