--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,6 +31,8 @@ jobs:
               uses: snyk/actions/iac@master
               env:
                 SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+              with:
+                args: --sarif-file-output=snyk.sarif
 
             - name: Upload result to GitHub Code Scanning
               continue-on-error: true
