feat/update : Updating keywords version | feat/security : Retrieving vault key from environment variable rather than file

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -10,7 +10,7 @@
 # Latest revision: 01 march 2022
 # -------------------------------------------------------
 
-name: Module Build Pipeline
+name: Module Security Scan Pipeline
 
 on:
   schedule:
