--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,15 +63,15 @@ jobs:
                 ref: v1.0.0
                 token: ${{ secrets.GH_ACCESS_TOKEN }}
 
-            - name: Retrieving vault key
-              run: printf '%s\n' '${{ secrets.VAULT_KEY }}' > vault/database.key
-
-            - name: Lauching tests
+            - name: Launching tests
+              continue-on-error: true
+              env:
+                VAULT_KEY: ${{ secrets.VAULT_KEY }}
               uses: docker://technogix/terraform-python-awscli:v2.0.0
               with:
-                args: ./module/scripts/robot.sh -l DEBUG -d tests
+                args: ./module/scripts/robot.sh -l WARN -d tests -k VAULT_KEY
 
-            - name: Push API documentation to Github Pages
+            - name: Push test report to Github Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
                 publish_dir: ./tests
